kubernetes/00-namespaces.yaml
# Namespace para isolar os recursos da aplicação
apiVersion: v1
kind: Namespace
metadata:
  name: uday-app
  labels:
    enviroment: development
    istio-injection: enabled
